src/test/ui/feature-gates/feature-gate-const_generics.rs
fn foo<const X: ()>() {} //~ ERROR `()` is forbidden as the type of a const generic parameter

struct Foo<const X: usize>([(); X]);

fn main() {}
